<resources>
    <string name="app_name">Hugo</string>
    <string name="read_button_text">Čítal som niečo</string>
    <string name="saw_button_text">Videl som niečo</string>
    <string name="fab_desc">more information</string>
    <string name="app_info_text">Hugo je nadizajnovaný tak aby Ti pomohol zorientovať sa v spletitom a neprehľadom svete informácií!</string>
    <string name="image_info_desc">This is image</string>
    <string name="app_desc">Ako to funguje?</string>
    <string name="welcome_text">Vitaj v aplikácii hugo!</string>
    <string name="informing_about_the_app_desc">informing about the app</string>
    <string name="next_button_desc">next_button</string>
    <string name="next_fab_text"> Ďalej</string>
    <string name="number_one_desc">Question number one</string>
    <string name="question_one_text">Kde si to čítal?</string>
    <string name="radiobutton1_choice_one_text">Internet</string>
    <string name="radiobutton1_choice_two_text">Facebook</string>
    <string name="radiobutton1_choice_three_text">Iná sociálna sieť</string>
    <string name="radiobutton1_choice_four_text">Časopis alebo noviny</string>
    <string name="radiobutton1_choice_five_text">Kniha</string>
    <string name="website_example">stranka.sk</string>
    <string name="number_two_desc">Question number two</string>
    <string name="question_two_text">Poznáš meno autora?</string>
    <string name="radiobutton2_choice_one_text">Áno</string>
    <string name="radiobutton2_choice_two_text">Nie</string>
    <string name="number_three_desc">Question number three</string>
    <string name="question_three_text">Čítal si to aj inde? Máš viac zrojov?</string>
    <string name="radiobutton3_choice_one_text">Áno</string>
    <string name="radiobutton3_choice_two_text">Nie</string>
    <string name="number_four_desc">Question number four</string>
    <string name="question_four_text">Spája sa s informáciou aj predaj produktov?</string>
    <string name="radiobutton4_choice_one_text">Áno</string>
    <string name="radiobutton4_choice_two_text">Nie</string>
    <string name="number_five_desc">Question number five</string>
    <string name="question_five_text">Vyvoláva táto informácia v tebe strach?</string>
    <string name="radiobutton5_choice_one_text">Áno</string>
    <string name="radiobutton5_choice_two_text">Nie</string>
    <string name="number_six_desc">Question number six</string>
    <string name="question_six_text">Vymyká sa informácia bežnému poznanu, resp. spoločenskému konsenzu?</string>
    <string name="radiobutton6_choice_one_text">Áno</string>
    <string name="radiobutton6_choice_two_text">Nie</string>
    <string name="number_seven_desc">Question number seven</string>
    <string name="question_seven_text">Je to šokujúca správa?</string>
    <string name="radiobutton7_choice_one_text">Áno</string>
    <string name="radiobutton7_choice_two_text">Nie</string>
    <string name="number_eight_desc">Question number eight</string>
    <string name="question_eight_text">Je možné túto informáciu overiť z viacerých zdrojov, napr. zahraničných médií?</string>
    <string name="radiobutton8_choice_one_text">Áno</string>
    <string name="radiobutton8_choice_two_text">Nie</string>
    <string name="number_nine_desc">Question number nine</string>
    <string name="question_nine_text">Rozdeľuje táto informácia spoločnosť?</string>
    <string name="radiobutton9_choice_one_text">Áno</string>
    <string name="radiobutton9_choice_two_text">Nie</string>
    <string name="header_read_text">Odpovedz na pár otázok</string>
    <string name="number_ten_desc">Key words</string>
    <string name="question_tem_text">Zadaj kľúčové slová alebo výrok:</string>
    <string name="key_words_hint">vírus, usa, laboratórium, pandémia</string>
    <string name="btn_read_analyze"> Zistiť  výsledky</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="result_header_text">Výsledok analýzy Tvojich parametrov</string>
    <string name="result_desc_text">Po dôkladnej analýze Hugo vypočítal do akej miery je pravdepodobné, že to čo si čítal je dezinformácia.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>