<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="257dp"
        android:layout_gravity="top"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/informing_about_the_app_desc"
        android:src="@drawable/hugo_logo_simple_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/pink_700"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/app_info_text"
        android:textAlignment="center"
        android:textColor="@color/pink_700"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_info"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="94dp"
        android:layout_height="55dp"
        android:layout_margin="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:contentDescription="@string/fab_desc"
        android:elevation="10dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        android:text="@string/next_fab_text"
        android:textAlignment="center"
        android:textColor="@color/grey"
        android:textSize="14sp"
        android:textStyle="normal"
        android:theme="@style/MyMaterialTheme"
        android:typeface="sans"
        app:backgroundTint="@color/pink_700"
        app:fabSize="auto"
        app:pressedTranslationZ="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>